syntax = "proto3";
package protos;
option csharp_namespace = "LanDataTransmitter";

service Transmitter {
    rpc Connect (ConnectRequest) returns (ConnectReply);
    rpc Disconnect (DisconnectRequest) returns (DisconnectReply);
    rpc PushText (PushTextRequest) returns (PushTextReply); // C -> S
    rpc PullText (PullTextRequest) returns (stream PullTextReply); // C <- S
}

// Connect

message ConnectRequest {
    string name = 1;
}

message ConnectReply {
    bool accepted = 1;
    string id = 2;
}

// Disconnect

message DisconnectRequest {
    string id = 1;
}

message DisconnectReply {
    bool accepted = 1;
}

// PushText

message PushTextRequest {
    string id = 1;
    string message = 2;
}

message PushTextReply {
    bool accepted = 1;
}

// PullText

message PullTextRequest {
    string id = 1;
}

message PullTextReply {
    bool closing = 1;
    string message = 2;
}
